--- a/packages/combobox/src/styles/index.css
+++ b/packages/combobox/src/styles/index.css
@@ -174,6 +174,31 @@
 	}
 }
 
+.rt-ComboboxContent {
+	--scrollarea-scrollbar-vertical-margin-top: var(--select-content-padding);
+	--scrollarea-scrollbar-vertical-margin-bottom: var(--select-content-padding);
+	--scrollarea-scrollbar-horizontal-margin-left: var(--select-content-padding);
+	--scrollarea-scrollbar-horizontal-margin-right: var(--select-content-padding);
+
+	overflow: hidden;
+	background-color: var(--color-panel-solid);
+
+	&:where([data-side]) {
+		min-width: var(--radix-select-trigger-width);
+		max-height: var(--radix-select-content-available-height);
+		transform-origin: var(--radix-select-content-transform-origin);
+	}
+}
+
+.rt-ScrollAreaViewport {
+	box-sizing: border-box;
+	padding: var(--select-content-padding);
+
+	:where(.rt-SelectContent:has(.rt-ScrollAreaScrollbar[data-orientation="vertical"])) & {
+		padding-right: var(--space-3);
+	}
+}
+
 /***************************************************************************************************
    *                                                                                                 *
    * TRIGGER VARIANTS                                                                                *
@@ -378,7 +403,6 @@
 		background-color: var(--accent-a5);
 	}
 }
-
 
 [cmdk-input-wrapper] {
 	margin-bottom: 1rem;
